# ethreum_core

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  packages.txt  test_publish.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  FEATURE-FORM.yml
crates/: packages.txt  test_publish.sh
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: sol.rs
crates/dyn-abi/: Cargo.toml  README.md
crates/dyn-abi/benches/: abi.rs  types.rs
crates/dyn-abi/src/: arbitrary.rs  coerce.rs  error.rs  lib.rs  specifier.rs
crates/dyn-abi/src/dynamic/: error.rs  event.rs  token.rs  ty.rs  value.rs
crates/dyn-abi/src/eip712/: coerce.rs  resolver.rs  typed_data.rs
crates/dyn-abi/src/ext/: abi.rs  error.rs  event.rs
crates/json-abi/: Cargo.toml  README.md
crates/json-abi/benches/: json_abi.rs
crates/json-abi/src/: abi.rs  internal_type.rs  item.rs  lib.rs  param.rs  state_mutability.rs  utils.rs
crates/json-abi/tests/: abi.rs
crates/json-abi/tests/it/: abi_items.rs  abis.rs  event_params.rs  params.rs  state_mutability.rs  test.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/benches/: primitives.rs
crates/primitives/src/bits/: address.rs  macros.rs
crates/primitives/src/bytes/: mod.rs
crates/primitives/src/signed/: int.rs
crates/primitives/src/utils/: units.rs
crates/sol-macro/: Cargo.toml  README.md
crates/sol-macro-expander/: Cargo.toml  README.md
crates/sol-macro-expander/src/: lib.rs  verbatim.rs
crates/sol-macro-expander/src/expand/: contract.rs  enum.rs  error.rs  event.rs  function.rs  mod.rs  struct.rs  to_abi.rs  ty.rs  udt.rs
crates/sol-macro-input/: Cargo.toml
crates/sol-macro-input/src/: attr.rs  input.rs  json.rs  lib.rs
crates/sol-macro/src/: lib.rs
crates/sol-type-parser/: Cargo.toml  README.md
crates/sol-type-parser/src/: root.rs  stem.rs  tuple.rs  type_spec.rs
crates/sol-types/: Cargo.toml  README.md  type_system.md
crates/sol-types/src/: eip712.rs  errors.rs  ext.rs  lib.rs  utils.rs
crates/sol-types/src/abi/: decoder.rs  encoder.rs  mod.rs  token.rs
crates/sol-types/src/types/: data_type.rs  error.rs  struct.rs  ty.rs  value.rs
crates/sol-types/src/types/event/: mod.rs  topic.rs
crates/sol-types/src/types/interface/: event.rs  mod.rs
crates/sol-types/tests/doctests/: contracts.rs  events.rs  function_like.rs  json.rs  structs.rs  types.rs
crates/sol-types/tests/macros/sol/: abi.rs  eip712.rs  json.rs  mod.rs
crates/sol-types/tests/ui/: contract.rs  empty.rs  error.rs  event.rs  function.rs  imports.rs  keywords.rs  keywords.stderr  overloads.rs  resolve.rs  storage.rs  type.rs  type.stderr  var_def.rs
crates/sol-types/tests/ui/features/json/: abi.rs  abigen.stderr
crates/sol-types/tests/ui/features/not(json)/: abi.rs  abigen.rs  abigen.stderr
crates/syn-solidity/: Cargo.toml  README.md
crates/syn-solidity/src/: lib.rs
crates/syn-solidity/src/ident/: mod.rs
crates/syn-solidity/tests/: contracts.rs
crates/syn-solidity/tests/contracts/: ForgeStd.patch  PrbMath.patch  UniswapV2Factory.patch  UniswapV2Pair.patch  UniswapV3Factory.patch  UniswapV3Pool.patch  UniswapV3PoolDeployer.patch
scripts/: bless_tests.sh
tests/core-sol/: Cargo.toml
tests/core-sol/src/: lib.rs
