[package]
name = "linera-alloy-core"
description = "Rust Ethereum core libraries"
keywords = ["ethereum", "abi", "encoding", "evm", "solidity"]
categories = ["no-std", "encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/core"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
linera-alloy-primitives = { workspace = true, default-features = false }

linera-alloy-dyn-abi = { workspace = true, default-features = false, optional = true }
linera-alloy-json-abi = { workspace = true, default-features = false, optional = true }
linera-alloy-sol-types = { workspace = true, default-features = false, optional = true }

alloy-rlp = { workspace = true, default-features = false, optional = true }

[features]
std = ["linera-alloy-primitives/std", "linera-alloy-json-abi?/std", "linera-alloy-dyn-abi?/std", "linera-alloy-sol-types?/std"]

dyn-abi = ["sol-types", "dep:linera-alloy-dyn-abi"]
json-abi = ["json", "serde", "dep:linera-alloy-json-abi"]
json = ["linera-alloy-sol-types?/json"]
sol-types = ["dep:linera-alloy-sol-types"]

tiny-keccak = ["linera-alloy-primitives/tiny-keccak"]
native-keccak = ["linera-alloy-primitives/native-keccak"]
asm-keccak = ["linera-alloy-primitives/asm-keccak"]

postgres = ["std", "linera-alloy-primitives/postgres"]
getrandom = ["linera-alloy-primitives/getrandom"]
rand = ["linera-alloy-primitives/rand"]
rlp = ["linera-alloy-primitives/rlp", "dep:alloy-rlp"]
serde = ["linera-alloy-primitives/serde"]
ssz = ["std", "linera-alloy-primitives/ssz"]
arbitrary = [
    "std",
    "linera-alloy-primitives/arbitrary",
    "linera-alloy-sol-types?/arbitrary",
    "linera-alloy-dyn-abi?/arbitrary",
]
k256 = ["linera-alloy-primitives/k256"]
eip712 = ["linera-alloy-sol-types?/eip712-serde", "linera-alloy-dyn-abi?/eip712"]
